--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "zustand": "^4.5.2"
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-modern-datepicker": "^1.0.5",
     "typescript": "^5.1.3"
   },
   "private": true
