--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "date-fns": "^3.3.1",
     "expo": "~50.0.11",
     "expo-status-bar": "~1.11.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
